; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_view.c_view_child_handle_surface_unmap.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_view.c_view_child_handle_surface_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_view_child = type { i32 }
%struct.wl_listener = type { i32 }

@surface_unmap = common dso_local global i32 0, align 4
@child = common dso_local global %struct.sway_view_child* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wl_listener*, i8*)* @view_child_handle_surface_unmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @view_child_handle_surface_unmap(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sway_view_child*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %7 = load %struct.sway_view_child*, %struct.sway_view_child** %5, align 8
  %8 = ptrtoint %struct.sway_view_child* %7 to i32
  %9 = load i32, i32* @surface_unmap, align 4
  %10 = call %struct.sway_view_child* @wl_container_of(%struct.wl_listener* %6, i32 %8, i32 %9)
  store %struct.sway_view_child* %10, %struct.sway_view_child** %5, align 8
  %11 = load %struct.sway_view_child*, %struct.sway_view_child** %5, align 8
  %12 = call i32 @view_child_damage(%struct.sway_view_child* %11, i32 1)
  %13 = load %struct.sway_view_child*, %struct.sway_view_child** %5, align 8
  %14 = getelementptr inbounds %struct.sway_view_child, %struct.sway_view_child* %13, i32 0, i32 0
  store i32 0, i32* %14, align 4
  ret void
}

declare dso_local %struct.sway_view_child* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @view_child_damage(%struct.sway_view_child*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
